go-echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-echo
spec:
  replicas: 7
  selector:
    matchLabels:
      app: go-echo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: go-echo
    spec:
      containers:
      - name: go-echo
        image: kowlon/go-echo:v2
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
