go-echo/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-echo
spec:
  hosts:
    - trainingapp.kci.dpdns.org
  gateways:
    - istio-system/apps
  http:
    - match: 
        - uri:
            prefix: /  
      route:
        - destination:
            port:
              number: 80
            host: go-echo
